# agent-zero

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
agent/: dependencies.py  graph.py  llm.py  state.py
agent/nodes/: planner.py  reasoner.py  reflector.py  responder.py  tool_executor.py
agent/prompts/: planner_prompt.py  reasoner_prompt.py  reflector_prompt.py  responder_prompt.py
agent/tools/: __init__.py  calculator.py  file_reader.py  search.py
routers/: agent.py
schema/: schemas.py
